--- a/app/styles/navigator.less
+++ b/app/styles/navigator.less
@@ -107,9 +107,13 @@ table {
 html {
     padding: 0;
     margin: 0;
+
+    height: 100%;
 }
 
 body {
+    height: 100%;
+
     padding: 0;
     margin: 0;
 
@@ -162,6 +166,7 @@ input:focus {
 #nav {
     position: fixed;
     top: 0;
+    left: 0;
     z-index: 2;
     width: 100%;
     height: @navHeight;
@@ -396,19 +401,22 @@ zoom: 1;*/
 
 #contentWrapper {
     overflow: visible;
-    position: relative;
+    position: absolute;
     top: 0;
     left: 0;
+    height: 100%;
     width: 100%;
     visibility: hidden; //display: none;
 }
 
 #content {
+    .borderBox;
     overflow: visible;
     visibility: visible;
     position: relative;
-    margin-top: @navHeight;
-    margin-right: @sideBarWrapperWidth;
+    padding-top: @navHeight;
+    padding-right: @sideBarWrapperWidth;
+    height: 100%;
 }
 
 #updates{
